--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
 	implementation 			'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 			'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 	implementation			'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 			'org.springframework.boot:spring-boot-starter-web'
 	implementation 			'org.springframework.boot:spring-boot-starter-websocket'
@@ -29,6 +30,8 @@ dependencies {
 	runtimeOnly 			'com.h2database:h2'
 	runtimeOnly 			'com.mysql:mysql-connector-j'
 	annotationProcessor 	'org.projectlombok:lombok'
+	implementation			'org.springframework.boot:spring-boot-starter-validation'
+	implementation 			'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 		'org.springframework.boot:spring-boot-starter-test'
 }
 
