--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,12 @@
 server:
-  port: 80
+  port: 9000
   
+  ssl:
+    enabled: true
+    key-store: classpath:ssl-server.jks
+    key-store-password: changeit
+    key-store-type: JKS
+    key-alias: selfsigned_localhost_sslserver
 spring:
   h2:
     console:
@@ -34,4 +40,4 @@ mybatis:
   mapper-locations: classpath:mappers/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
-    
+
